protobuf/shit
In file included from writer.cpp:2:0:
lm.helloworld.pb.h:17:2: error: #error This file was generated by an older version of protoc which is
 #error This file was generated by an older version of protoc which is
  ^
lm.helloworld.pb.h:18:2: error: #error incompatible with your Protocol Buffer headers. Please
 #error incompatible with your Protocol Buffer headers.  Please
  ^
lm.helloworld.pb.h:19:2: error: #error regenerate this file with a newer version of protoc.
 #error regenerate this file with a newer version of protoc.
  ^
In file included from writer.cpp:2:0:
lm.helloworld.pb.h: In member function ‘void lm::helloworld::clear_str()’:
lm.helloworld.pb.h:185:16: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
   if (str_ != &::google::protobuf::internal::kEmptyString) {
                ^
lm.helloworld.pb.h: In member function ‘void lm::helloworld::set_str(const string&)’:
lm.helloworld.pb.h:195:16: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
   if (str_ == &::google::protobuf::internal::kEmptyString) {
                ^
lm.helloworld.pb.h: In member function ‘void lm::helloworld::set_str(const char*)’:
lm.helloworld.pb.h:202:16: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
   if (str_ == &::google::protobuf::internal::kEmptyString) {
                ^
lm.helloworld.pb.h: In member function ‘void lm::helloworld::set_str(const char*, size_t)’:
lm.helloworld.pb.h:209:16: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
   if (str_ == &::google::protobuf::internal::kEmptyString) {
                ^
lm.helloworld.pb.h: In member function ‘std::string* lm::helloworld::mutable_str()’:
lm.helloworld.pb.h:216:16: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
   if (str_ == &::google::protobuf::internal::kEmptyString) {
                ^
lm.helloworld.pb.h: In member function ‘std::string* lm::helloworld::release_str()’:
lm.helloworld.pb.h:223:16: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
   if (str_ == &::google::protobuf::internal::kEmptyString) {
                ^
lm.helloworld.pb.h:227:41: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
     str_ = const_cast< ::std::string*>(&::google::protobuf::internal::kEmptyString);
                                         ^
lm.helloworld.pb.h: In member function ‘void lm::helloworld::set_allocated_str(std::string*)’:
lm.helloworld.pb.h:232:16: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
   if (str_ != &::google::protobuf::internal::kEmptyString) {
                ^
lm.helloworld.pb.h:240:41: error: ‘kEmptyString’ is not a member of ‘google::protobuf::internal’
     str_ = const_cast< ::std::string*>(&::google::protobuf::internal::kEmptyString);
                                         ^
